--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: ServerEssentials-Spigot
+name: ServerEssentials
 version: 1.82.3
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
