--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: ServerEssentials
-version: 1.82.9
+version: 2.0
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
 description: A Plugin for all Server Owners!
-softdepend: [PlaceholderAPI, DiscordSRV, DiscordSRV-Staff-Chat, AcceptTheRules, HuskHomes, LibsDisguises] # Plugins that load before ServerEssentials
+softdepend: [PlaceholderAPI, DiscordSRV, DiscordSRV-Staff-Chat, AcceptTheRules, HuskHomes, LibsDisguises, Vault] # Plugins that load before ServerEssentials
 loadbefore: [Essentials]
 commands:
   se:
@@ -201,6 +201,16 @@ commands:
     aliases: [checkaccount, checkplayer, playerinfo]
   ping:
     description: Ping Command
+  pay:
+    description: Pay Command
+  balance:
+    description: Balance Command
+    aliases: [bal, money]
+  baltop:
+    description: Baltop Command
+  eco:
+    description: Eco Command
+    aliases: [economy]
 permissions:
   se.all:
     description: "Gives access to all commands."
@@ -291,6 +301,10 @@ permissions:
       se.whois: true
       se.ping: true
       se.afk: true
+      se.pay: true
+      se.balance: true
+      se.baltop: true
+      se.eco: true
   se.reload:
     description: "Gives access to the /se reload command."
     default: false
@@ -545,4 +559,16 @@ permissions:
     default: false
   se.afk:
     description: "AFK Command Permission"
+    default: false
+  se.pay:
+    description: "Pay Command Permission"
+    default: false
+  se.balance:
+    description: "Balance Command Permission"
+    default: false
+  se.baltop:
+    description: "Baltop Command Permission"
+    default: false
+  se.eco:
+    description: "Eco Command Permission"
     default: false
